--- a/src/components/Home/Projects/Projects.module.scss
+++ b/src/components/Home/Projects/Projects.module.scss
@@ -2,6 +2,10 @@
     & > *:first-child {
         width: 80%;
     }
+
+    @media (max-width: 768px) {
+        padding: 0 20px;
+    }
 }
 
 .button {
